Refactored file names

--- a/sections/dev__collapsible-content.liquid
+++ b/sections/dev__collapsible-content.liquid
@@ -1,4 +1,4 @@
-{{ 'dev_collapsible-content.css' | asset_url | stylesheet_tag }}
+{{ 'dev__collapsible-content.css' | asset_url | stylesheet_tag }}
 
 <div class="collapsible-content">
   <h2>{{ section.settings.title }}</h2>
