--- a/sections/dev__header.liquid
+++ b/sections/dev__header.liquid
@@ -1,4 +1,4 @@
-{{ 'dev_header.css' | asset_url | stylesheet_tag }}
+{{ 'dev__header.css' | asset_url | stylesheet_tag }}
 
 <header class="header">
     <button class="navbar-toggler" onclick="toggleNavbar()">
