--- a/sections/dev__multi-column.liquid
+++ b/sections/dev__multi-column.liquid
@@ -1,6 +1,6 @@
 <!-- dev_multi-column.liquid -->
 
-{{ 'multi-column.css' | asset_url | stylesheet_tag }}
+{{ 'dev_multi-column.css' | asset_url | stylesheet_tag }}
 
 <div class="multi-column">
   <h2 class="{% if section.settings.enable_tailwind_styling %} {{ section.settings.multi-column__section-title }}  {% endif %}">
