--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -75,7 +75,7 @@
     {% comment %} {% sections 'header-group' %} {% endcomment %}
 
     {% section 'announcement-bar' %}
-    {% section 'dev_header' %}
+    {% section 'dev__header' %}
 
     <main id="MainContent" class="content-for-layout focus-none" role="main">
       {{ content_for_layout }}
