--- a/assets/dev_multi-column.css
+++ b/assets/dev_multi-column.css
@@ -1,6 +1,6 @@
 /* multi-column.css */
 
-.multi-column {
+/* .multi-column {
     width: 90%;
     margin: 0 auto;
 
@@ -8,8 +8,9 @@
         font-size: 30px;
     }
 }
+ */
 
-.multi-column__container {
+/* .multi-column__container {
   margin-top: 20px;
   display: flex;
   gap: 20px;
@@ -21,30 +22,27 @@
   &.three-columns {
     flex-wrap: wrap;
   }
-}
+} */
 
 .multi-column__item {
 
-    width: 30%;
+   /*  width: 30%;
     padding: 15px 15px;
-    background-color: #ebe7e7;
-    border-radius: 20px;
+
 
     & .multi-column__item-img {
         width: 100%;
         height: 200px;
         overflow: hidden;
-    }
+    } */
 
     & .multi-column__item-img img{
         width: 100%;
         height: 100%;
         object-fit: cover; 
-        border-radius: 10px;
-        
     }
 
-    & h3 {
+   /*  & h3 {
         font-size: 20px;
         margin-top: 10px;
         font-weight: 500;
@@ -67,10 +65,10 @@
     & a:hover{
         text-decoration: underline;
         cursor: pointer;
-    }
+    } */
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
 
     .multi-column {
         margin-top: 20px;
@@ -105,8 +103,8 @@
         }
 
         & p{
-            font-size: 14x;
+            font-size: 14px;
         }
     }
 
-}
+} */
