adjusted Tailwind Classes from Theme Settings

--- a/sections/dev__multi-column.liquid
+++ b/sections/dev__multi-column.liquid
@@ -65,33 +65,31 @@
       "type": "text",
       "id": "multi-column",
       "label": "Style Section",
-      "default": "w-[90%] mt-20 md:mx-auto",
-      "placeholder": "bg-red-100"
+      "default": "w-[90%] mt-10 md:mt-20 mx-auto"
     },
     {
       "type": "text",
       "id": "multi-column__section-title",
       "label": "Style Section Header",
-      "default": "text-2xl md:text-3xl",
-      "placeholder": "bg-red-100"
+      "default": "md:pb-4 text-2xl md:text-3xl"
     },
     {
       "type": "text",
       "id": "multi-column__container",
       "label": "Style Multi-Column Container",
-      "default": "mt-20 flex flex-col gap-20 md:flex-row"
+      "default": "mt-7 md:mt-5 flex flex-col gap-5 md:gap-10 md:flex-row"
     },
     {
       "type": "text",
       "id": "multi-column__item",
       "label": "Style Multi-Column Item",
-      "default": "w-full md:w-1/3 px-2.5 py-2.5 md:px-3.5 md:py-3.5 bg-ebe7e7 rounded-[15px] md:rounded-[20px]"
+      "default": "w-full md:w-[30%] px-2.5 py-2.5 md:px-3.5 md:py-3.5 rounded-[15px] md:rounded-[20px] bg-[#ebe7e7]"
     },
     {
       "type": "text",
       "id": "multi-column__item-img",
       "label": "Style Column Item Image",
-      "default": "w-full h-[150px] md:h-[200px] overflow-hidden rounded-[10px] object-cover"
+      "default": "w-full h-[150px] md:h-[200px] overflow-hidden rounded-[10px]"
     },
     {
       "type": "text",
@@ -112,7 +110,7 @@
       "id": "multi-column__item-link",
       "label": "Style Column Link",
       "info": "Add classes like bg-blue-100",
-      "default": "text-sm md:text-base font-normal text-blue-900 hover:underline cursor-pointer"
+      "default": "text-sm md:text-base font-normal cursor-pointer text-blue-900 hover:text-blue-600 hover:underline"
     }
   ],
   "blocks": [
