--- a/sections/dev__multi-column.liquid
+++ b/sections/dev__multi-column.liquid
@@ -1,4 +1,4 @@
-<!-- dev_multi-column.liquid -->
+<!-- dev__multi-column.liquid -->
 
 {%- style -%}
 
@@ -17,7 +17,7 @@
     {{ section.settings.section_title }}
   </h2>
 
-  <div class="multi-column__container {{ section.settings.multi-column__container }} {% if section.settings.multi_column_layout != true %} 'md:flex-col' {% else %} 'md:flex-row' {% endif %}">
+  <div class="multi-column__container {{ section.settings.multi-column__container }}">
     {% for block in section.blocks %}
       <div class="multi-column__item {{ section.settings.multi-column__item }}">
         {% if block.settings.image %}
@@ -33,7 +33,7 @@
           {{ block.settings.column_content }}
         </p>
 
-        {% if block.settings.link_label != blank %}
+        {% if block.settings.link_label != blank and block.settings.linkUrl != blank %}
               <a href="{{ block.settings.linkUrl }}" class="multi-column__item-link {{ section.settings.multi-column__item-link }}"> 
                   {{ block.settings.link_label }}
               </a>
@@ -44,7 +44,7 @@
       {% if column_counter == 3 %}
         {% assign column_counter = 0 %}
         </div>
-        <div class="multi-column__container {{ section.settings.multi-column__container }} {% if section.settings.multi_column_layout != true %} 'flex-col' {% else %} 'flex-wrap' {% endif %}">
+        <div class="multi-column__container {{ section.settings.multi-column__container }}">
       {% endif %}
     {% endfor %}
   </div>
@@ -55,12 +55,6 @@
   "name": "Multi-Column",
   "class": "multi-column",
   "settings": [
-    {
-      "type": "checkbox",
-      "label": "Multi-Column Layout",
-      "id": "multi_column_layout",
-      "default": true
-    },
     {
       "type": "text",
       "label": "Section Title",
@@ -81,7 +75,7 @@
       "type": "text",
       "id": "multi-column__section-title",
       "label": "Style Section Header",
-      "default": "md:pb-4 text-2xl md:text-3xl"
+      "default": "md:pb-4 text-2xl md:text-3xl font-semibold"
     },
     {
       "type": "text",
