--- a/sections/cards.liquid
+++ b/sections/cards.liquid
@@ -1,22 +1,43 @@
-<div class="section-container">
-  <div class="section-container__title">Offers</div>
-</div>
-
 {% for block in section.blocks %}
-  <div class="card-section">
-    <a href="{{ block.settings.card_link }}" class="card-section__link">
-      <div class="card-section__card">
-        {% if block.settings.card_image != blank %}
-          {{ block.settings.card_image | image_url: width: 300, height: 300 }}
-        {% endif %}
-        <h3 class="card-section__card-title">{{ block.settings.card_title }}</h3>
-        <p class="card-section__card-details">{{ block.settings.card_details }}</p>
-        <a href="{{ block.settings.card_link }}" class="card-section__btn">{{ block.settings.card_button_text }}</a>
+  <div class="section-container px-4 py-4">
+    <div class="section-container__title text-center">{{ block.settings.card_title }}</div>
+
+    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+      <a href="#">
+        {{
+          block.settings.card_image
+          | image_url: width: 400, height: 200
+          | image_tag: class: 'card_image rounded-t-lg'
+        }}
+      </a>
+      <div class="p-5">
+        <a href="#">
+          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+            Noteworthy technology acquisitions 2021
+          </h5>
+        </a>
+        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+          Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.
+        </p>
+        <a
+          href="#"
+          class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        >
+          Read more
+          <svg
+            class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 14 10"
+          >
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+          </svg>
+        </a>
       </div>
-    </a>
+    </div>
   </div>
 {% endfor %}
-
 {% schema %}
 {
   "name": "Card Section",
@@ -29,7 +50,7 @@
           "type": "text",
           "label": "Card Title",
           "id": "card_title",
-          "default": "25% Off"
+          "default": "Card Offers"
         },
         {
           "type": "textarea",
