--- a/sections/cards.liquid
+++ b/sections/cards.liquid
@@ -1,8 +1,11 @@
+<div class="section-container px-4 py-4 ">
+  <h2 class="section-container__title text-center text-3xl font-bold text-gray-900">
+    {{ section.settings.section_title }}
+  </h2>
+</div>
 {% for block in section.blocks %}
-  <div class="section-container px-4 py-4">
-    <div class="section-container__title text-center">{{ block.settings.card_title }}</div>
-
-    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+  <div class="px-4">
+    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 ">
       <a href="#">
         {{
           block.settings.card_image
@@ -38,43 +41,52 @@
     </div>
   </div>
 {% endfor %}
+
 {% schema %}
 {
   "name": "Card Section",
+  "settings": [
+    {
+      "type": "text",
+      "id": "section_title",
+      "label": "Section Title",
+      "default": "Our Special Offers"
+    }
+  ],
   "blocks": [
     {
       "type": "card_block",
       "name": "Card",
       "settings": [
         {
-          "type": "text",
-          "label": "Card Title",
-          "id": "card_title",
-          "default": "Card Offers"
+          "type": "image_picker",
+          "label": "Card Image",
+          "id": "card_image",
+          "info": "Select an image for the card"
         },
         {
           "type": "textarea",
           "label": "Card Details",
           "id": "card_details",
-          "default": "Use code: SAVE25"
+          "default": "Add card Details"
+        },
+        {
+          "type": "textarea",
+          "label": "Card Sub Details",
+          "id": "card_subdetails",
+          "default": "Add card sub Details"
+        },
+        {
+          "type": "text",
+          "label": "Card Button Text",
+          "id": "card_button_text",
+          "default": "Read more"
         },
         {
           "type": "text",
           "label": "Card Link",
           "id": "card_link",
           "default": "/collections/all?discount=SAVE25"
-        },
-        {
-          "type": "text",
-          "label": "Card Button Text",
-          "id": "card_button_text",
-          "default": "Shop Now"
-        },
-        {
-          "type": "image_picker",
-          "label": "Card Image",
-          "id": "card_image",
-          "info": "Select an image for the card"
         }
       ]
     }
