wrapped the anchor tag

--- a/sections/cards.liquid
+++ b/sections/cards.liquid
@@ -4,44 +4,46 @@
   </h2>
 </div>
 <div class="flex flex-wrap justify-center gap-4 px-4">
-{% for block in section.blocks %}
-  <div class="w-full md:w-1/4">
-    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 ">
-      <a href="#">
-        {{
-          block.settings.card_image
-          | image_url: width: 400, height: 200
-          | image_tag: class: 'card_image rounded-t-lg'
-        }}
-      </a>
-      <div class="p-5">
+  {% for block in section.blocks %}
+    <div class="w-full md:w-1/4">
+      <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 ">
         <a href="#">
-          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-            {{ block.settings.card_details }}
-          </h5>
+          {{
+            block.settings.card_image
+            | image_url: width: 400, height: 200
+            | image_tag: class: 'card_image rounded-t-lg'
+          }}
         </a>
-        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-          {{ block.settings.card_subdetails }}
-        </p>
-        <a
-          href="{{ block.settings.card_link }}"
-          class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        >
-          {{ block.settings.card_button_text }}
-          <svg
-            class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 14 10"
-          >
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-          </svg>
-        </a>
+        <div class="p-5">
+          <a href="#">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+              {{ block.settings.card_details }}
+            </h5>
+          </a>
+          <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+            {{ block.settings.card_subdetails }}
+          </p>
+          {% if block.settings.card_link != blank and block.settings.card_button_text != blank %}
+            <a
+              href="{{ block.settings.card_link }}"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+            >
+              {{ block.settings.card_button_text }}
+              <svg
+                class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 10"
+              >
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+              </svg>
+            </a>
+          {% endif %}
+        </div>
       </div>
     </div>
-  </div>
-{% endfor %}
+  {% endfor %}
 </div>
 
 {% schema %}
