--- a/sections/cards.liquid
+++ b/sections/cards.liquid
@@ -7,7 +7,7 @@
   {% for block in section.blocks %}
     <div class="w-full md:w-1/4">
       <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 ">
-        {% if block.settings.card_link != blank and block.settings.card_button_text != blank %}
+        {% if block.settings.card_link != blank and block.settings.card_image != blank %}
           <a href="{{ block.settings.card_link }}">
             {{
               block.settings.card_image
@@ -17,7 +17,7 @@
           </a>
         {% endif %}
         <div class="p-5">
-          {% if block.settings.card_link != blank and block.settings.card_button_text != blank %}
+          {% if block.settings.card_link != blank and block.settings.card_details != blank %}
             <a href="{{ block.settings.card_link }}">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                 {{ block.settings.card_details }}
