modal specified in theme.liquid, open/close modal

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -76,6 +76,7 @@
 
     {% section 'announcement-bar' %}
     {% section 'dev__header' %}
+    {% section 'dev__modal' %}
 
     <main id="MainContent" class="content-for-layout focus-none" role="main">
       {{ content_for_layout }}
